<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/layout_1"
        android:layout_width="300dip"
        android:layout_height="fill_parent"
        android:background="#112"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="#112" />

        <!-- アカウント管理=================================================================== -->
        <!-- ダッシュボード=================================================================== -->

        <LinearLayout
            android:id="@+id/ll_menu_dashboard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#112"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:background="@drawable/dashboard"
                android:contentDescription="@string/image" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/side_menu_dashboard"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="#112" />

        <!-- 機器設定=================================================================== -->

        <LinearLayout
            android:id="@+id/ll_menu_device_setup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#112"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="24dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="5dip"
                android:background="@drawable/device_setup"
                android:contentDescription="@string/image" />

            <TextView
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/side_menu_device_setup"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="#112" />

        <!-- 目標値設定=================================================================== -->
        <!-- リマインダー=================================================================== -->
        <!-- 設定=================================================================== -->
        <!-- ヘルプ=================================================================== -->
        <!-- ユーザ追加(非表示)=================================================================== -->
        <!-- チュートリアル(非表示)=================================================================== -->
        <!-- サインアウト=================================================================== -->

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#112"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:text="@string/side_menu_signout"
            android:textColor="#574e4a"
            android:textSize="20sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/version"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:paddingLeft="10dip"
            android:text="@string/side_menu_version"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </FrameLayout>

</LinearLayout>